@@ -152,7 +152,7 @@ module ActiveMerchant #:nodoc:
               end
               xml.tag! 'n2:CallbackURL', options[:callback_url] unless options[:callback_url].blank?
 
-              add_payment_details(xml, with_money_default(money), currency_code, options)
+              add_payment_details(xml, money, currency_code, options)
               if options[:shipping_options]
                 options[:shipping_options].each do |shipping_option|
                   xml.tag! 'n2:FlatRateShippingOptions' do
@@ -201,7 +201,7 @@ module ActiveMerchant #:nodoc:
               xml.tag! 'n2:ReferenceID', options[:reference_id]
               xml.tag! 'n2:PaymentAction', action
               xml.tag! 'n2:PaymentType', options[:payment_type] || 'Any'
-              add_payment_details(xml, with_money_default(money), currency_code, options)
+              add_payment_details(xml, money, currency_code, options)
               xml.tag! 'n2:IPAddress', options[:ip]
             end
           end
@@ -212,10 +212,6 @@ module ActiveMerchant #:nodoc:
 
       def build_response(success, message, response, options = {})
         PaypalExpressResponse.new(success, message, response, options)
-      end
-
-      def with_money_default(money)
-        amount(money).to_f.zero? ? 100 : money
       end
 
       def locale_code(country_code)
