@@ -9,6 +9,7 @@
 * Add Cardstream Modern gateway [ExxKA]
 * Pin: Fix special headers [duff]
 * PayPal Express gateway: Remember the billing agreement id as Response#authorization [duff]
+* PayPal Express gateway: Allow an amount of 0 [duff]
 
 == Version 1.32.1 (April 4, 2013)
 
